crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@217.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_div VALUES (4,8,'627208063620965.397582272040628872773601055303353339700043792111288801181637510303989399395425313995651311362368773096988861977687484912995632130587762386590996099363383976320342247076516604162469063709298438133327434461462906199160715395064249299615054970359309619951777972710299484596875999967582794277241285253106817446259313281064844416249524876385699646393555435017820686376877981018047574348711991428666249794623006175739581915209218834701034964043360823844816042368184094857692062884223864639972005010863342567608351008172649209459933114800143792514183138995700133608613158857147417653998048890116531052767737435620558349226865105888201598712435680481803901906613772821370519525404423549161696526405320391828194356063547089626322474164332505209233143121068245585662919687001395119229263995765376465304715643388771609446');"
---
InsertStmt@0..866
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_div"
  Whitespace@23..24 " "
  SelectStmt@24..864
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..864
      AConst@32..33
        Iconst@32..33 "4"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "8"
      Ascii44@35..36 ","
      AConst@36..864
        Sconst@36..864 "'627208063620965.3975 ..."
  Ascii41@864..865 ")"
  Ascii59@865..866 ";"

